Fix: overflow

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: #00040f;
   overflow-x: hidden;
+  -webkit-overflow-x: hidden;
 }
 
 header {
